--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -18,7 +18,7 @@ permissions:
 jobs:
   deploy:
 
-    runs-on: ubuntu-latest, windows-10, windows-11
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
