--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ numpy = "^1.22.2"
 [build-system]
 requires = [
     "setuptools>=42",
-    setuptools_scm[toml]>=6.2,
+    "setuptools_scm[toml]>=6.2",
     "wheel"
 ]
 build-backend = "setuptools.build_meta"
