--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = Type
-version = 0.1.0
+name = TerminalTyping
+version = 0.0.3
 author = GreenHexagon
 author_email = irrelevantpersonindividual@gmail.com
 description = Package for Typing Effects
